--- a/assets/css/rentstyle.css
+++ b/assets/css/rentstyle.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
-  background-image: url("./assets/img/background.jpg");
+  /*background-image: url("./img/background.jpg");*/
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -92,34 +92,64 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #0056b3 ;
 }
 
-/* Navbar styles */
-/* .navbar {
-  background-color: #333;
-  overflow: hidden;
+.navbar {
+   background-color: #333;
+   color: white;
+   padding: 10px 20px;
+   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+ }
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.navbar ul {
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+}
+
+.navbar-brand:hover {
+  color: #ddd;
+}
+
+.navbar-nav {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  display: flex;
 }
 
-.navbar li {
-  float: left;
+.navbar-nav li {
+  margin-right: 15px;
 }
 
-.navbar li a {
-  display: block;
+.navbar-nav li a {
   color: white;
-  text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
-.navbar li a:hover {
-  background-color: #ddd;
-  color: black;
-} */
+.navbar-nav li a:hover {
+  background-color: #555;
+}
+
+.nav-item img {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  transition: transform 0.3s ease; /* Add transition for smooth hover effect */
+}
+
+.nav-item img:hover {
+  transform: scale(1.1); /* Increase size on hover */
+}
